fix: missing main class

--- a/api/pom.xml
+++ b/api/pom.xml
@@ -189,6 +189,7 @@
                             <artifactId>lombok</artifactId>
                         </exclude>
                     </excludes>
+                    <mainClass>com.grash.ApiApplication</mainClass>
                 </configuration>
             </plugin>
             <plugin>
