chore: make env variables optional

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       GCP_BUCKET_NAME: ${GCP_BUCKET_NAME}
       GCP_JSON: ${GCP_JSON}
       GCP_PROJECT_ID: ${GCP_PROJECT_ID}
-      MAIL_RECIPIENTS: ${MAIL_RECIPIENTS} #abc@gmail.com,acd@gmail.com
+      MAIL_RECIPIENTS: ${MAIL_RECIPIENTS}
       SMTP_PWD: ${SMTP_PWD}
       SMTP_USER: ${SMTP_USER}
       SPRING_PROFILES_ACTIVE: ${SPRING_PROFILES_ACTIVE}
