--- a/.env
+++ b/.env
@@ -1,17 +1,17 @@
 
-SMTP_PWD=your_smtp_pwd
-SMTP_USER=your_smtp_user
+SMTP_PWD=
+SMTP_USER=
 JWT_SECRET_KEY=your_jwt_secret
 
 
-REACT_APP_GOOGLE_KEY=your_google_key
-REACT_APP_GOOGLE_TRACKING_ID=your_google_tracking_id
-FASTSPRING_PWD=your_fast_spring_pwd
-FASTSPRING_USER=your_fast_spring_user
+REACT_APP_GOOGLE_KEY=
+REACT_APP_GOOGLE_TRACKING_ID=
+FASTSPRING_PWD=
+FASTSPRING_USER=
 FRONT_URL=http://localhost:3000
 REACT_APP_API_URL=http://localhost:8080/
 SPRING_PROFILES_ACTIVE=
-GCP_BUCKET_NAME=your_gcp_bucket
-GCP_JSON=your_gcp_json
-GCP_PROJECT_ID=your_gcp_project_id
-MAIL_RECIPIENTS=your_email@example.com
+GCP_BUCKET_NAME=
+GCP_JSON=
+GCP_PROJECT_ID=
+MAIL_RECIPIENTS=
