fix: java.base/java.lang=ALL-UNNAMED

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -35,4 +35,4 @@ COPY --from=build /app/target/*.jar my-spring-boot-app.jar
 EXPOSE 8080
 
 # Specify the command to run on container startup
-CMD ["java", "-jar", "/app/my-spring-boot-app.jar"]
+CMD ["java", "--add-opens", "java.base/java.lang=ALL-UNNAMED", "-jar", "/app/my-spring-boot-app.jar"]
