--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,9 +41,10 @@ services:
       context: frontend
       args:
         REACT_APP_API_URL: ${REACT_APP_API_URL:-http://localhost:8080/}
+        REACT_APP_JWT_SECRET_KEY: ${JWT_SECRET_KEY}
         REACT_APP_GOOGLE_KEY: ${REACT_APP_GOOGLE_KEY}
         REACT_APP_GOOGLE_TRACKING_ID: ${REACT_APP_GOOGLE_TRACKING_ID}
-        REACT_APP_JWT_SECRET_KEY: ${JWT_SECRET_KEY}
+        REACT_APP_MUI_X_LICENSE: ${REACT_APP_MUI_X_LICENSE}
     container_name: atlas_frontend
     ports:
       - "3000:3000"
