--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,10 +4,12 @@ ARG REACT_APP_API_URL
 ARG REACT_APP_GOOGLE_KEY
 ARG REACT_APP_GOOGLE_TRACKING_ID
 ARG REACT_APP_JWT_SECRET_KEY
+ARG REACT_APP_MUI_X_LICENSE
 ENV REACT_APP_API_URL=${REACT_APP_API_URL}
 ENV REACT_APP_GOOGLE_KEY=$REACT_APP_GOOGLE_KEY
 ENV REACT_APP_GOOGLE_TRACKING_ID=$REACT_APP_GOOGLE_TRACKING_ID
 ENV REACT_APP_JWT_SECRET_KEY=$REACT_APP_JWT_SECRET_KEY
+ENV REACT_APP_MUI_X_LICENSE=$REACT_APP_MUI_X_LICENSE
 
 WORKDIR /usr/src/app
 COPY package*.json ./
