feat: minio init

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -24,6 +24,10 @@ ENV SMTP_PWD=$SMTP_PWD
 ENV SMTP_USER=$SMTP_USER
 ENV SPRING_PROFILES_ACTIVE=$SPRING_PROFILES_ACTIVE
 ENV JWT_SECRET_KEY=$JWT_SECRET_KEY
+ENV MINIO_ENDPOINT=$MINIO_ENDPOINT
+ENV MINIO_BUCKET=$MINIO_BUCKET
+ENV MINIO_ACCESS_KEY=$MINIO_ACCESS_KEY
+ENV STORAGE_TYPE=$STORAGE_TYPE
 
 # Set the working directory in the container
 WORKDIR /app
