--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -4,9 +4,9 @@ spring:
     url: jdbc:postgresql://${DB_URL}
     username: ${DB_USER}
     password: ${DB_PWD}
-#  sql:
-#    init:
-#      data-locations: classpath:data-preprod.sql
+  #  sql:
+  #    init:
+  #      data-locations: classpath:data-preprod.sql
   #    tomcat:
   #      max-wait: 20000
   #      max-active: 50
@@ -76,10 +76,6 @@ mail:
 superAdmin:
   role:
     name: SuperAdministratorGrash@p;l
-gcp:
-  project-id: ${GCP_PROJECT_ID}
-  bucket-name: ${GCP_BUCKET_NAME}
-  value: ${GCP_JSON}
 fast-spring:
   username: ${FASTSPRING_USER}
   password: ${FASTSPRING_PWD}
@@ -89,3 +85,15 @@ management:
       enabled: true
 api:
   host: ${API_HOST}
+storage:
+  type: ${STORAGE_TYPE}
+  minio:
+    endpoint: ${MINIO_ENDPOINT}
+    bucket: ${MINIO_BUCKET}
+    access-key: ${MINIO_ACCESS_KEY}
+    secret-key: ${MINIO_SECRET_KEY}
+    public-endpoint: ${MINIO_PUBLIC_ENDPOINT}
+  gcp:
+    project-id: ${GCP_PROJECT_ID}
+    bucket-name: ${GCP_BUCKET_NAME}
+    value: ${GCP_JSON}
