--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -84,7 +84,7 @@ management:
     mail:
       enabled: true
 api:
-  host: ${API_HOST}
+  host: ${PUBLIC_API_URL}
 storage:
   type: ${STORAGE_TYPE}
   minio:
