--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -92,7 +92,7 @@ storage:
     bucket: ${MINIO_BUCKET}
     access-key: ${MINIO_ACCESS_KEY}
     secret-key: ${MINIO_SECRET_KEY}
-    public-endpoint: ${MINIO_PUBLIC_ENDPOINT}
+    public-endpoint: ${PUBLIC_MINIO_ENDPOINT}
   gcp:
     project-id: ${GCP_PROJECT_ID}
     bucket-name: ${GCP_BUCKET_NAME}
