--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,7 +40,7 @@ services:
       MINIO_ACCESS_KEY: minio
       MINIO_SECRET_KEY: minio123
       STORAGE_TYPE: ${STORAGE_TYPE:-minio} #gpc|minio
-      MINIO_PUBLIC_ENDPOINT: ${MINIO_PUBLIC_ENDPOINT:-http://localhost:9000}
+      PUBLIC_MINIO_ENDPOINT: ${PUBLIC_MINIO_ENDPOINT:-http://localhost:9000}
     ports:
       - "8080:8080"
   frontend:
@@ -64,7 +64,7 @@ services:
       MINIO_ROOT_USER: minio
       MINIO_ROOT_PASSWORD: minio123
 #      MINIO_SERVER_URL: http://minio:9000
-#      MINIO_BROWSER_REDIRECT_URL: ${MINIO_PUBLIC_ENDPOINT:-http://localhost:9000}
+#      MINIO_BROWSER_REDIRECT_URL: ${PUBLIC_MINIO_ENDPOINT:-http://localhost:9000}
     volumes:
       - minio_data:/data
     ports:
