--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -88,12 +88,13 @@ api:
 storage:
   type: ${STORAGE_TYPE}
   minio:
-    endpoint: ${MINIO_ENDPOINT}
-    bucket: ${MINIO_BUCKET}
-    access-key: ${MINIO_ACCESS_KEY}
-    secret-key: ${MINIO_SECRET_KEY}
-    public-endpoint: ${PUBLIC_MINIO_ENDPOINT}
+    endpoint: ${MINIO_ENDPOINT:}
+    bucket: ${MINIO_BUCKET:}
+    access-key: ${MINIO_ACCESS_KEY:}
+    secret-key: ${MINIO_SECRET_KEY:}
+    public-endpoint: ${PUBLIC_MINIO_ENDPOINT:}
   gcp:
-    project-id: ${GCP_PROJECT_ID}
-    bucket-name: ${GCP_BUCKET_NAME}
-    value: ${GCP_JSON}
+    project-id: ${GCP_PROJECT_ID:}
+    bucket-name: ${GCP_BUCKET_NAME:}
+    value: ${GCP_JSON:}
+    json-path: ${GCP_JSON_PATH:}
