chore: move to atlas-cmms.com

--- a/mobile/android/app/src/main/AndroidManifest.xml
+++ b/mobile/android/app/src/main/AndroidManifest.xml
@@ -35,8 +35,8 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="https" android:host="atlascmms.com" android:pathPrefix="/app/work-orders"/>
-        <data android:scheme="https" android:host="atlascmms.com" android:pathPrefix="/app/requests"/>
+        <data android:scheme="https" android:host="atlas-cmms.com" android:pathPrefix="/app/work-orders"/>
+        <data android:scheme="https" android:host="atlas-cmms.com" android:pathPrefix="/app/requests"/>
       </intent-filter>
     </activity>
     <activity android:name="com.facebook.react.devsupport.DevSettingsActivity" android:exported="false"/>
