--- a/mobile/package.json
+++ b/mobile/package.json
@@ -8,7 +8,8 @@
     "web": "expo start --web",
     "test": "jest --watchAll",
     "format": "prettier --write \"./**/*.{ts,tsx,js,jsx,json}\" --config ./.prettierrc",
-    "eas-build-pre-install": "echo $GOOGLE_SERVICES_BASE64 | base64 --decode > ./google-services.json && echo $GOOGLE_SERVICES_BASE64 | base64 --decode > ./android/app/google-services.json"
+    "eas-build-pre-install": "echo $GOOGLE_SERVICES_BASE64 | base64 --decode > ./google-services.json && echo $GOOGLE_SERVICES_BASE64 | base64 --decode > ./android/app/google-services.json",
+    "postinstall": "patch-package"
   },
   "jest": {
     "preset": "jest-expo"
@@ -29,6 +30,7 @@
     "dotenv": "^16.4.5",
     "expo": "~47.0.12",
     "expo-asset": "~8.7.0",
+    "expo-av": "~13.0.3",
     "expo-barcode-scanner": "~12.1.0",
     "expo-constants": "~14.0.2",
     "expo-device": "~5.0.0",
@@ -78,8 +80,7 @@
     "sockjs-client": "^1.6.1",
     "text-encoding": "^0.7.0",
     "websocket": "^1.0.34",
-    "yup": "^1.0.0",
-    "expo-av": "~13.0.3"
+    "yup": "^1.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
@@ -89,6 +90,7 @@
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
     "jest": "^26.6.3",
     "jest-expo": "~47.0.1",
+    "patch-package": "^8.0.0",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.1.0",
     "typescript": "^4.6.3"
