--- a/mobile/tsconfig.json
+++ b/mobile/tsconfig.json
@@ -13,6 +13,8 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react-jsx"
-  }
+    "jsx": "react-jsx",
+    "types": []
+  },
+  "exclude": ["node_modules", "babel.config.js", "metro.config.js"]
 }
