--- a/.env
+++ b/.env
@@ -3,6 +3,7 @@ INVITATION_VIA_EMAIL=false
 SMTP_PWD=
 SMTP_USER=
 JWT_SECRET_KEY=your_jwt_secret
+ALLOWED_ORGANIZATION_ADMINS=
 REACT_APP_GOOGLE_KEY=
 REACT_APP_GOOGLE_TRACKING_ID=
 FASTSPRING_PWD=
