--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -99,3 +99,5 @@ storage:
     bucket-name: ${GCP_BUCKET_NAME:}
     value: ${GCP_JSON:}
     json-path: ${GCP_JSON_PATH:}
+
+allowed-organization-admins: ${ALLOWED_ORGANIZATION_ADMINS:}
