--- a/.env.example
+++ b/.env.example
@@ -4,10 +4,8 @@ SMTP_PWD=
 SMTP_USER=
 JWT_SECRET_KEY=your_jwt_secret
 ALLOWED_ORGANIZATION_ADMINS=
-REACT_APP_GOOGLE_KEY=
-REACT_APP_GOOGLE_TRACKING_ID=
-FASTSPRING_PWD=
-FASTSPRING_USER=
+GOOGLE_KEY=
+GOOGLE_TRACKING_ID=
 PUBLIC_FRONT_URL=http://localhost:3000
 PUBLIC_API_URL=http://localhost:8080
 SPRING_PROFILES_ACTIVE=
@@ -17,3 +15,4 @@ GCP_PROJECT_ID=
 PUBLIC_MINIO_ENDPOINT=http://localhost:9000
 MAIL_RECIPIENTS=
 STORAGE_TYPE=MINIO
+MUI_X_LICENSE=
