--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -4,7 +4,7 @@ spring:
     url: jdbc:postgresql://${DB_URL}
     username: ${DB_USER}
     password: ${DB_PWD}
-  #  sql:
+    driver-class-name: org.postgresql.Driver
   #    init:
   #      data-locations: classpath:data-preprod.sql
   #    tomcat:
