--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,8 @@ services:
     volumes:
       - postgres_data:/var/lib/postgresql/data
   api:
-    build: api
-    container_name: atlas_api
+    image: intelloop/atlas-cmms-backend
+    container_name: atlas-cmms-backend
     depends_on:
       - postgres
       - minio
@@ -45,15 +45,15 @@ services:
     ports:
       - "8080:8080"
   frontend:
-    build:
-      context: frontend
-      args:
-        REACT_APP_API_URL: ${PUBLIC_API_URL}
-        REACT_APP_GOOGLE_KEY: ${REACT_APP_GOOGLE_KEY}
-        REACT_APP_GOOGLE_TRACKING_ID: ${REACT_APP_GOOGLE_TRACKING_ID}
-        REACT_APP_MUI_X_LICENSE: ${REACT_APP_MUI_X_LICENSE}
-        REACT_APP_INVITATION_VIA_EMAIL: ${INVITATION_VIA_EMAIL:-false}
-    container_name: atlas_frontend
+    image: intelloop/atlas-cmms-frontend
+    container_name: atlas-cmms-frontend
+    environment:
+        API_URL: ${PUBLIC_API_URL}
+        GOOGLE_KEY: ${GOOGLE_KEY:- }
+        GOOGLE_TRACKING_ID: ${GOOGLE_TRACKING_ID:- }
+        MUI_X_LICENSE: ${MUI_X_LICENSE:- }
+        INVITATION_VIA_EMAIL: ${INVITATION_VIA_EMAIL:-false}
+        NODE_ENV: production
     ports:
       - "3000:3000"
     depends_on:
