--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,22 +1,23 @@
-FROM node:21.6.1
-
-ARG REACT_APP_API_URL
-ARG REACT_APP_GOOGLE_KEY
-ARG REACT_APP_GOOGLE_TRACKING_ID
-ARG REACT_APP_MUI_X_LICENSE
-ARG REACT_APP_INVITATION_VIA_EMAIL
-ENV REACT_APP_API_URL=${REACT_APP_API_URL}
-ENV REACT_APP_GOOGLE_KEY=$REACT_APP_GOOGLE_KEY
-ENV REACT_APP_GOOGLE_TRACKING_ID=$REACT_APP_GOOGLE_TRACKING_ID
-ENV REACT_APP_MUI_X_LICENSE=$REACT_APP_MUI_X_LICENSE
-ENV REACT_APP_INVITATION_VIA_EMAIL=$REACT_APP_INVITATION_VIA_EMAIL
+FROM node:21.6.1 AS build
 
 WORKDIR /usr/src/app
 COPY package*.json ./
 RUN npm install --legacy-peer-deps
 COPY . .
 RUN npm run build
-RUN npm install -g serve
+
+FROM nginx:1.27.0-alpine
+COPY --from=build /usr/src/app/build /usr/share/nginx/html
+COPY --from=build /usr/src/app/.env.example /usr/share/nginx/html/.env
+COPY --from=build /usr/src/app/nginx-custom.conf /etc/nginx/conf.d/default.conf
+
+RUN apk add --update nodejs
+RUN apk add --update npm
+
+RUN npm i -g runtime-env-cra
+
+WORKDIR /usr/share/nginx/html
 EXPOSE 3000
-#CMD ["npm", "start"]
-CMD ["serve", "-s", "build", "-l", "3000"]
+
+CMD ["/bin/sh", "-c", "runtime-env-cra && nginx -g \"daemon off;\""]
+
