--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "closest-match": "^1.3.3",
     "clsx": "1.1.1",
     "country-flag-icons": "1.5.5",
+    "cross-env": "^7.0.3",
     "crypto-browserify": "^3.12.0",
     "date-fns": "2.28.0",
     "dayjs": "^1.11.7",
@@ -94,6 +95,7 @@
     "redux": "4.2.0",
     "redux-devtools-extension": "2.13.9",
     "redux-thunk": "2.4.1",
+    "runtime-env-cra": "^0.2.4",
     "scheduler": "^0.23.0",
     "sockjs-client": "^1.6.1",
     "stompjs": "^2.3.3",
@@ -111,7 +113,7 @@
     "yup": "0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start --max_old_space_size=6096",
+    "start": "cross-env NODE_ENV=development runtime-env-cra --config-name=./public/runtime-env.js && react-scripts start --max_old_space_size=6096",
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "lint": "eslint .",
