--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -30,11 +30,13 @@ jobs:
         with:
           context: ./api
           push: true
+          platforms: linux/amd64,linux/arm64
           tags: ${{ env.BACKEND_IMAGE }}:latest
 
       - name: Build and push frontend image
         uses: docker/build-push-action@v5
         with:
           context: ./frontend
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ env.FRONTEND_IMAGE }}:latest
