--- a/.github/workflows/push-docker.yml
+++ b/.github/workflows/push-docker.yml
@@ -6,12 +6,11 @@ on:
       - main
 
 jobs:
-  build-and-push:
+  build-and-push-backend:
     runs-on: ubuntu-latest
     env:
       REGISTRY: docker.io
       BACKEND_IMAGE: intelloop/atlas-cmms-backend
-      FRONTEND_IMAGE: intelloop/atlas-cmms-frontend
     steps:
       - name: Checkout code
         uses: actions/checkout@v3
@@ -32,6 +31,24 @@ jobs:
           push: true
           platforms: linux/amd64,linux/arm64
           tags: ${{ env.BACKEND_IMAGE }}:latest
+
+  build-and-push-frontend:
+    runs-on: ubuntu-latest
+    env:
+      REGISTRY: docker.io
+      FRONTEND_IMAGE: intelloop/atlas-cmms-frontend
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v3
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Log in to Docker Hub
+        uses: docker/login-action@v3
+        with:
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push frontend image
         uses: docker/build-push-action@v5
