feat: cloud version var

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -101,3 +101,4 @@ storage:
     json-path: ${GCP_JSON_PATH:}
 
 allowed-organization-admins: ${ALLOWED_ORGANIZATION_ADMINS:}
+cloud-version: ${CLOUD_VERSION:false}
