--- a/frontend/package.json
+++ b/frontend/package.json
@@ -62,6 +62,7 @@
     "jsonwebtoken": "8.5.1",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
+    "mailto-link": "^2.0.0",
     "notistack": "2.0.5",
     "nprogress": "0.2.0",
     "numeral": "2.0.6",
