--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,6 +2,8 @@ FROM node:21.6.1 AS build
 
 WORKDIR /usr/src/app
 COPY package*.json ./
+RUN npm config set fetch-retry-maxtimeout 6000000
+RUN npm config set fetch-retry-mintimeout 1000000
 RUN NODE_OPTIONS="--max_old_space_size=4096" npm install --legacy-peer-deps
 COPY . .
 RUN npm run build
