refactor: dtos and update environment configuration for flexibility and clarity
- Introduced `TaskShowDTO` and `FloorPlanShowDTO` to improve data transfer object structures and streamline data handling in controllers.
- Removed redundant `id` fields from several DTOs and centralized the `id` field in `AuditShowDTO` to enhance consistency and reduce duplication.
- Updated `TaskController` and `FloorPlanController` to return new DTOs, utilizing mappers for conversion, thereby improving data encapsulation and separation of concerns.
- Modified `docker-compose.yml` and `.env.example` to use environment variables for database and MinIO credentials, promoting security and configurability.
- Adjusted README to reflect changes in environment variable requirements, emphasizing the importance of using unique credentials in production environments.

These changes enhance the maintainability and security of the codebase by promoting best practices in environment configuration and data handling.

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ ENABLE_EMAIL_NOTIFICATIONS=false
 INVITATION_VIA_EMAIL=false
 SMTP_PWD=
 SMTP_USER=
+POSTGRES_USER=rootUser
+POSTGRES_PWD=mypassword
 JWT_SECRET_KEY=your_jwt_secret
 ALLOWED_ORGANIZATION_ADMINS=
 GOOGLE_KEY=
@@ -11,6 +13,8 @@ PUBLIC_API_URL=http://localhost:8080
 GCP_BUCKET_NAME=
 GCP_JSON=
 GCP_PROJECT_ID=
+MINIO_USER=minio
+MINIO_PASSWORD=minio123
 PUBLIC_MINIO_ENDPOINT=http://localhost:9000
 MAIL_RECIPIENTS=
 STORAGE_TYPE=MINIO
