--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -25,7 +25,7 @@ spring:
       max-request-size: 7MB
       max-file-size: 7MB
   profiles:
-    active: dev
+    active: dev,sso
   mvc:
     pathmatch:
       matching-strategy: ant_path_matcher
@@ -59,7 +59,41 @@ spring:
       auth: true
       starttls.enable: true
       ssl.trust: smtp.gmail.com
-
+  security:
+    oauth2:
+      client:
+        registration:
+          google:
+            client-id: ${OAUTH2_GOOGLE_CLIENT_ID:}
+            client-secret: ${OAUTH2_GOOGLE_CLIENT_SECRET:}
+            redirect-uri: "{baseUrl}/oauth2/callback/{registrationId}"
+            scope:
+              - email
+              - profile
+#          microsoft:
+#            client-id: ${OAUTH2_MICROSOFT_CLIENT_ID:}
+#            client-secret: ${OAUTH2_MICROSOFT_CLIENT_SECRET:}
+#            redirect-uri: "{baseUrl}/oauth2/callback/{registrationId}"
+#            scope:
+#              - email
+#              - profile
+#              - openid
+#            client-authentication-method: post
+#            authorization-grant-type: authorization_code
+#          github:
+#            client-id: ${OAUTH2_GITHUB_CLIENT_ID:}
+#            client-secret: ${OAUTH2_GITHUB_CLIENT_SECRET:}
+#            redirect-uri: "{baseUrl}/oauth2/callback/{registrationId}"
+#            scope:
+#              - user:email
+#              - read:user
+#        provider:
+#          microsoft:
+#            authorization-uri: https://login.microsoftonline.com/common/oauth2/v2.0/authorize
+#            token-uri: https://login.microsoftonline.com/common/oauth2/v2.0/token
+#            jwk-set-uri: https://login.microsoftonline.com/common/discovery/v2.0/keys
+#            user-info-uri: https://graph.microsoft.com/oidc/userinfo
+#            user-name-attribute: email
 server:
   port: 8080 # This is the default port anyway, but you can change it here
 
@@ -102,3 +136,18 @@ storage:
 
 allowed-organization-admins: ${ALLOWED_ORGANIZATION_ADMINS:}
 cloud-version: ${CLOUD_VERSION:false}
+
+# SSO Configuration
+sso:
+  enabled: ${SSO_ENABLED:false}
+  providers: ${SSO_PROVIDERS:google,microsoft,github}
+
+# Application OAuth2 Configuration
+app:
+  oauth2:
+    # Redirect URLs after successful/failed authentication
+    success-redirect-url: ${OAUTH2_SUCCESS_REDIRECT_URL:http://localhost:3000/oauth2/success}
+    failure-redirect-url: ${OAUTH2_FAILURE_REDIRECT_URL:http://localhost:3000/oauth2/failure}
+    # List of authorized redirect URIs
+    authorized-redirect-uris:
+      - ${OAUTH2_AUTHORIZED_REDIRECT_URI:http://localhost:3000/oauth2/success}
