feat: implement SSO support and update dependencies
Removed `application-sso.yml` to consolidate SSO configurations within `application.yml` and environment variables. Introduced SSO support by conditionally configuring OAuth2 client registrations based on the `ENABLE_SSO` flag, with support for Google and Microsoft providers. Updated the frontend to dynamically handle SSO login using configuration values and adjusted the login component to conditionally render SSO options.

Additionally, updated `psl` and `punycode` dependencies in `package-lock.json` to newer versions for security and compatibility improvements. Updated configuration files and examples to include new SSO-related environment variables.

--- a/.env.example
+++ b/.env.example
@@ -19,3 +19,7 @@ PUBLIC_MINIO_ENDPOINT=http://localhost:9000
 MAIL_RECIPIENTS=
 STORAGE_TYPE=MINIO
 MUI_X_LICENSE=
+ENABLE_SSO=false
+OAUTH2_PROVIDER=
+OAUTH2_CLIENT_ID=
+OAUTH2_CLIENT_SECRET=
