--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -101,3 +101,8 @@ storage:
 
 allowed-organization-admins: ${ALLOWED_ORGANIZATION_ADMINS:}
 cloud-version: ${CLOUD_VERSION:false}
+enable-sso: ${ENABLE_SSO:false}
+oauth2:
+  success-redirect-url: ${PUBLIC_FRONT_URL}/oauth2/success
+  failure-redirect-url: ${PUBLIC_FRONT_URL}/oauth2/failure
+  provider: ${OAUTH2_PROVIDER}
