--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -43,6 +43,10 @@ services:
       PUBLIC_MINIO_ENDPOINT: ${PUBLIC_MINIO_ENDPOINT:-http://localhost:9000}
       INVITATION_VIA_EMAIL: ${INVITATION_VIA_EMAIL:-false}
       ENABLE_EMAIL_NOTIFICATIONS: ${ENABLE_EMAIL_NOTIFICATIONS:-false}
+      ENABLE_SSO: ${ENABLE_SSO:-false}
+      OAUTH2_PROVIDER: ${OAUTH2_PROVIDER}
+      OAUTH2_CLIENT_ID: ${OAUTH2_CLIENT_ID}
+      OAUTH2_CLIENT_SECRET: ${OAUTH2_CLIENT_SECRET}
     ports:
       - "8080:8080"
   frontend:
@@ -57,6 +61,8 @@ services:
         INVITATION_VIA_EMAIL: ${INVITATION_VIA_EMAIL:-false}
         CLOUD_VERSION: false
         NODE_ENV: production
+        ENABLE_SSO: ${ENABLE_SSO:-false}
+        OAUTH2_PROVIDER: ${OAUTH2_PROVIDER}
     ports:
       - "3000:3000"
     depends_on:
