--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -106,3 +106,4 @@ oauth2:
   success-redirect-url: ${PUBLIC_FRONT_URL}/oauth2/success
   failure-redirect-url: ${PUBLIC_FRONT_URL}/oauth2/failure
   provider: ${OAUTH2_PROVIDER}
+license-key: ${LICENSE_KEY}
