chore: check license key before sending

--- a/.env.example
+++ b/.env.example
@@ -18,8 +18,9 @@ MINIO_PASSWORD=minio123
 PUBLIC_MINIO_ENDPOINT=http://localhost:9000
 MAIL_RECIPIENTS=
 STORAGE_TYPE=MINIO
-MUI_X_LICENSE=
+LICENSE_KEY=
 ENABLE_SSO=false
 OAUTH2_PROVIDER=
 OAUTH2_CLIENT_ID=
 OAUTH2_CLIENT_SECRET=
+MUI_X_LICENSE=
