--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       OAUTH2_PROVIDER: ${OAUTH2_PROVIDER}
       OAUTH2_CLIENT_ID: ${OAUTH2_CLIENT_ID}
       OAUTH2_CLIENT_SECRET: ${OAUTH2_CLIENT_SECRET}
+      LICENSE_KEY: ${LICENSE_KEY}
     ports:
       - "8080:8080"
   frontend:
@@ -62,8 +63,7 @@ services:
         CLOUD_VERSION: false
         NODE_ENV: production
         ENABLE_SSO: ${ENABLE_SSO:-false}
-        OAUTH2_PROVIDER: ${OAUTH2_PROVIDER}
-        LICENSE_KEY: ${LICENSE_KEY:-}
+        OAUTH2_PROVIDER: ${OAUTH2_PROVIDER:- }
     ports:
       - "3000:3000"
     depends_on:
