--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       OAUTH2_PROVIDER: ${OAUTH2_PROVIDER}
       OAUTH2_CLIENT_ID: ${OAUTH2_CLIENT_ID}
       OAUTH2_CLIENT_SECRET: ${OAUTH2_CLIENT_SECRET}
-      LICENSE_KEY: ${LICENSE_KEY}
+      LICENSE_KEY: ${LICENSE_KEY:-}
     ports:
       - "8080:8080"
   frontend:
