feat: add configuration for optional license fingerprint requirement
Introduced a new configuration property `license-fingerprint-required` to make the inclusion of the fingerprint in license validation optional. Updated `LicenseService` to conditionally include the fingerprint based on this property. Adjusted configuration files (`application.yml`, `docker-compose.yml`, and `.env.example`) to support this new property, providing flexibility in deployment environments.

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -106,4 +106,5 @@ oauth2:
   success-redirect-url: ${PUBLIC_FRONT_URL}/oauth2/success
   failure-redirect-url: ${PUBLIC_FRONT_URL}/oauth2/failure
   provider: ${OAUTH2_PROVIDER}
-license-key: ${LICENSE_KEY}
+license-key: ${LICENSE_KEY:}
+license-fingerprint-required: ${LICENSE_FINGERPRINT_REQUIRED:true}
