chore: use caffeine cache and cache asset analytics controller

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -59,6 +59,10 @@ spring:
       auth: true
       starttls.enable: true
       ssl.trust: smtp.gmail.com
+  cache:
+    type: caffeine
+    caffeine:
+      spec: maximumSize=1000,expireAfterWrite=20m
 server:
   port: 8080 # This is the default port anyway, but you can change it here
 
