chore: SMTP host and port env vars

--- a/.env.example
+++ b/.env.example
@@ -2,6 +2,8 @@ ENABLE_EMAIL_NOTIFICATIONS=false
 INVITATION_VIA_EMAIL=false
 SMTP_PWD=
 SMTP_USER=
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
 POSTGRES_USER=rootUser
 POSTGRES_PWD=mypassword
 JWT_SECRET_KEY=your_jwt_secret
