--- a/api/src/main/resources/mailMessages.properties
+++ b/api/src/main/resources/mailMessages.properties
@@ -21,7 +21,7 @@ requestUpdate=Request Update
 newPurchaseOrderHeader=New Purchase Order
 newPurchaseOrder=New Purchase Order
 resetPwdHeader=New Atlas Password
-resetPwdMessage=Your password has been reset. Please log in again using this password: {0}. It is important to change your password as soon as possible for security reasons.
+resetPwdMessage=We received a request to reset your password. Please click the link provided to confirm the reset. Once confirmed, your new temporary password will be: <br><br>{0}<br><br>Please make sure to change this password as soon as possible for your account security.
 login=Log In
 wo_number=Work Order #{0}
 format_date={0} days {1} hours {2} minutes
