--- a/mobile/package.json
+++ b/mobile/package.json
@@ -15,8 +15,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^13.0.0",
-    "@react-native-community/datetimepicker": "6.5.2",
-    "@react-native-community/netinfo": "9.3.5",
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-community/datetimepicker": "6.7.3",
+    "@react-native-community/netinfo": "9.3.7",
     "@react-native-firebase/analytics": "^17.4.0",
     "@react-native-firebase/app": "^17.4.0",
     "@react-navigation/bottom-tabs": "^6.0.5",
@@ -27,33 +28,33 @@
     "base-64": "^1.0.0",
     "deprecated-react-native-prop-types": "^4.0.0",
     "dotenv": "^16.4.5",
-    "expo": "~47.0.12",
-    "expo-asset": "~8.7.0",
-    "expo-av": "~13.0.3",
-    "expo-barcode-scanner": "~12.1.0",
-    "expo-constants": "~14.0.2",
-    "expo-device": "~5.0.0",
-    "expo-document-picker": "~11.0.1",
-    "expo-font": "~11.0.1",
-    "expo-image-picker": "~14.0.2",
-    "expo-linking": "~3.3.1",
-    "expo-notifications": "~0.17.0",
-    "expo-permissions": "~14.0.0",
-    "expo-splash-screen": "~0.17.5",
-    "expo-status-bar": "~1.4.2",
-    "expo-system-ui": "~2.0.1",
-    "expo-updates": "~0.15.6",
-    "expo-web-browser": "~12.0.0",
+    "expo": "^48.0.0",
+    "expo-asset": "~8.9.1",
+    "expo-av": "~13.2.1",
+    "expo-barcode-scanner": "~12.3.2",
+    "expo-constants": "~14.2.1",
+    "expo-device": "~5.2.1",
+    "expo-document-picker": "~11.2.2",
+    "expo-font": "~11.1.1",
+    "expo-image-picker": "~14.1.1",
+    "expo-linking": "~4.0.1",
+    "expo-notifications": "~0.18.1",
+    "expo-permissions": "~14.1.1",
+    "expo-splash-screen": "~0.18.2",
+    "expo-status-bar": "~1.4.4",
+    "expo-system-ui": "~2.2.1",
+    "expo-updates": "~0.16.4",
+    "expo-web-browser": "~12.1.1",
     "formik": "^2.2.9",
     "i18next": "^22.4.10",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "mime": "^3.0.0",
     "prop-types": "^15.8.1",
-    "react": "18.1.0",
-    "react-dom": "18.1.0",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
     "react-i18next": "^12.2.0",
-    "react-native": "0.70.5",
+    "react-native": "0.71.3",
     "react-native-actions-sheet": "^0.8.21",
     "react-native-dotenv": "^3.4.11",
     "react-native-dropdown-picker": "^5.4.4",
@@ -63,16 +64,16 @@
     "react-native-image-viewing": "^0.2.2",
     "react-native-modal-datetime-picker": "^14.0.1",
     "react-native-nfc-manager": "^3.14.7",
-    "react-native-pager-view": "6.0.1",
+    "react-native-pager-view": "6.1.2",
     "react-native-paper": "^5.9.1",
     "react-native-pure-jwt": "^3.0.2",
-    "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "~3.22.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.27.0",
     "react-native-tab-view": "^3.4.1",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-vector-icons": "^9.2.0",
-    "react-native-web": "~0.18.9",
-    "react-native-webview": "11.23.1",
+    "react-native-web": "~0.18.11",
+    "react-native-webview": "11.26.0",
     "react-redux": "^8.0.5",
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.4.2",
@@ -82,17 +83,17 @@
     "yup": "^1.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9",
+    "@babel/core": "^7.20.0",
     "@types/mime": "^3.0.1",
-    "@types/react": "~18.0.24",
+    "@types/react": "~18.0.27",
     "@types/react-native": "~0.70.6",
     "babel-plugin-transform-inline-environment-variables": "^0.4.4",
-    "jest": "^26.6.3",
-    "jest-expo": "~47.0.1",
+    "jest": "^29.2.1",
+    "jest-expo": "^47.0.0",
     "patch-package": "^8.0.0",
     "prettier": "^2.6.2",
     "react-test-renderer": "18.1.0",
-    "typescript": "^4.6.3"
+    "typescript": "^4.9.4"
   },
   "private": true
 }
