chore: update reset password email to use "Confirm reset" button in all supported languages
Revised the reset password email message in all language property files to instruct users to click a confirmation button instead of a link. Added a new `confirm_reset` label for the button in each language and updated the email template to use this label, ensuring consistency and clarity in password reset instructions across all locales.

--- a/api/src/main/resources/mailMessages.properties
+++ b/api/src/main/resources/mailMessages.properties
@@ -21,7 +21,8 @@ requestUpdate=Request Update
 newPurchaseOrderHeader=New Purchase Order
 newPurchaseOrder=New Purchase Order
 resetPwdHeader=New Atlas Password
-resetPwdMessage=We received a request to reset your password. Please click the link provided to confirm the reset. Once confirmed, your new temporary password will be: <br><br>{0}<br><br>Please make sure to change this password as soon as possible for your account security.
+resetPwdMessage=We received a request to reset your password. Please click the button below to confirm the reset. Once confirmed, your new temporary password will be: <br><br>{0}<br><br>Please make sure to change this password as soon as possible for your account security.
+confirm_reset=Confirm reset
 login=Log In
 wo_number=Work Order #{0}
 format_date={0} days {1} hours {2} minutes
