build: switch API Docker base image to openjdk:8-jdk-alpine for slimmer runtime
Replaces `openjdk:8-jdk-slim` with `openjdk:8-jdk-alpine` in the API Dockerfile to reduce image size and improve build efficiency.

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -6,7 +6,7 @@ RUN mvn clean package -DskipTests
 
 
 # Runtime Stage
-FROM openjdk:8-jdk-slim
+FROM openjdk:8-jdk-alpine
 
 # Set the working directory in the container
 WORKDIR /app
