--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,8 +70,7 @@ services:
     depends_on:
       - api
   minio:
-    image: minio/minio
-    container_name: atlas_minio
+    image: minio/minio:RELEASE.2025-04-22T22-12-26Z
     environment:
       MINIO_ROOT_USER: ${MINIO_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_PASSWORD}
