--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -112,3 +112,6 @@ oauth2:
   provider: ${OAUTH2_PROVIDER}
 license-key: ${LICENSE_KEY:}
 license-fingerprint-required: ${LICENSE_FINGERPRINT_REQUIRED:true}
+white-labeling:
+  logo-path: ${LOGO_PATH:}
+  custom-colors: ${CUSTOM_COLORS:}
