feat: add dynamic email background color support via customColors
Introduced support for dynamic email background colors in notification templates by parsing the `white-labeling.custom-colors` property and injecting the color into Thymeleaf contexts. Updated HTML templates to use the injected color for backgrounds and links, enabling white-label customization. Also ensured docker-compose defaults for `LOGO_PATH` and `CUSTOM_COLORS` are set to empty strings to avoid unset variable issues.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,8 +67,8 @@ services:
         NODE_ENV: production
         ENABLE_SSO: ${ENABLE_SSO:-false}
         OAUTH2_PROVIDER: ${OAUTH2_PROVIDER:- }
-        LOGO_PATH: ${LOGO_PATH}
-        CUSTOM_COLORS: ${CUSTOM_COLORS}
+        LOGO_PATH: ${LOGO_PATH:- }
+        CUSTOM_COLORS: ${CUSTOM_COLORS:- }
     ports:
       - "3000:3000"
     depends_on:
