feat: enhance white-labeling with multi-logo and color support via environment variables
Refactor white-labeling to support multiple custom logos and color schemes using new `LOGO_PATHS` and `CUSTOM_COLORS` environment variables.
- Replace single `LOGO_PATH` with `LOGO_PATHS` (JSON with `dark` and `white` keys) across backend, frontend, and documentation.
- Update backend `LogoSetupComponent` and email templates to use the new structure.
- Add frontend logic and scripts to copy and serve custom logos, with fallback to defaults.
- Update `.env.example`, `README.MD`, `docker-compose.yml`, and `application.yml` to document and propagate the new variables.
This allows organizations to white-label both logos (dark/white variants) and color themes without code changes.

--- a/api/.gitignore
+++ b/api/.gitignore
@@ -33,6 +33,7 @@ build/
 .vscode/
 src/main/resources/liquibase/*.properties
 src/main/resources/liquibase-outputChangeLog.xml
+src/main/resources/static/images/custom-logo.png
 
 gcp.json
 .codebuddy
