--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -113,5 +113,5 @@ oauth2:
 license-key: ${LICENSE_KEY:}
 license-fingerprint-required: ${LICENSE_FINGERPRINT_REQUIRED:true}
 white-labeling:
-  logo-path: ${LOGO_PATH:}
+  logo-paths: ${LOGO_PATHS:}
   custom-colors: ${CUSTOM_COLORS:}
