--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,7 +50,7 @@ services:
       LICENSE_KEY: ${LICENSE_KEY:-}
       LICENSE_FINGERPRINT_REQUIRED: ${LICENSE_FINGERPRINT_REQUIRED:-true}
       ALLOWED_ORGANIZATION_ADMINS: ${ALLOWED_ORGANIZATION_ADMINS:-}
-      LOGO_PATH: ${LOGO_PATH}
+      LOGO_PATHS: ${LOGO_PATHS}
       CUSTOM_COLORS: ${CUSTOM_COLORS}
     ports:
       - "8080:8080"
@@ -67,7 +67,7 @@ services:
         NODE_ENV: production
         ENABLE_SSO: ${ENABLE_SSO:-false}
         OAUTH2_PROVIDER: ${OAUTH2_PROVIDER:- }
-        LOGO_PATH: ${LOGO_PATH:- }
+        LOGO_PATHS: ${LOGO_PATHS:- }
         CUSTOM_COLORS: ${CUSTOM_COLORS:- }
     ports:
       - "3000:3000"
