--- a/.env.example
+++ b/.env.example
@@ -27,5 +27,5 @@ OAUTH2_CLIENT_ID=
 OAUTH2_CLIENT_SECRET=
 MUI_X_LICENSE=
 LICENSE_FINGERPRINT_REQUIRED=true
-LOGO_PATH=
+LOGO_PATHS=
 CUSTOM_COLORS=
