--- a/frontend/package.json
+++ b/frontend/package.json
@@ -120,7 +120,9 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
     "format": "prettier --write \"./**/*.{ts,tsx,js,jsx,json}\" --config ./.prettierrc",
-    "prepare": "cd .. && husky install frontend/.husky"
+    "prepare": "cd .. && husky install frontend/.husky",
+    "prebuild": "node scripts/copy-logo.js",
+    "prestart": "node scripts/copy-logo.js"
   },
   "browserslist": {
     "production": [
