feat: add license validity check and logo fallback logic to support secure white-labeling
Introduce backend LicenseController and LicenseService caching to expose license validity, with a 12-hour cache to reduce external API calls. Add Redux slice and frontend logic to fetch and store license validity state. Refactor logo rendering to use a new `useLogo` hook, which only displays custom logos if the license is valid and custom logo paths are provided, otherwise falling back to defaults. Hide "Powered by Intelloop" branding when white-labeling is active. Update theme color merging to support custom color schemes via environment variables.

This ensures that white-labeling (custom logos and colors) is only enabled for valid licenses, and that fallback branding is shown otherwise. Also adds relevant .idea project files and updates .gitignore for new logo assets.

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -27,3 +27,4 @@ yarn-error.log*
 
 public/runtime-env.js
 public/static/images/logo/custom-logo.png
+public/static/images/logo/custom-logo-white.png
