refactor: switch to backend-driven logo management and remove frontend logo copy logic
- Removed the frontend `copy-logo.js` script and associated npm scripts, consolidating all custom logo copying and management into the backend via `LogoSetupComponent`, which now ensures the logo directory exists and supports both dark and white variants.
- Updated backend to serve custom logos from `/app/static/images` (mounted as a Docker volume) and expose them at `/images/**`, enabling runtime updates and persistent storage during containerized deployments.
- Simplified the frontend `useLogo` hook to reference backend-served logo URLs directly and only display custom logos when the license is valid, preventing premature or invalid branding.
- Adjusted `.gitignore` to allow custom logos in the frontend repo and added `logo` directory to the root `.gitignore` for backend-managed assets.
- Updated `docker-compose.yml` to mount a host `logo` directory into the backend container for dynamic and persistent logo management.

This refactor centralizes white-label asset handling, enforces license checks for branding, and improves maintainability and deployment flexibility.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,6 +17,8 @@ services:
     depends_on:
       - postgres
       - minio
+    volumes:
+      - ./logo:/app/static/images
     environment:
       DB_URL: postgres/atlas
       DB_USER: ${POSTGRES_USER}
