refactor(frontend): replace `useLogo` and direct branding with unified `useBrand` hook for white-labeling
Removed the `useLogo` hook and all hardcoded brand, logo, and contact details from the frontend, introducing a new `useBrand` hook that supplies brand identity and logo URLs from runtime config or defaults. Updated all UI, mailto links, and documentation to interpolate brand name, short name, and contact details dynamically. Added support for a `BRAND_CONFIG` environment variable for full white-label customization, and moved license validity and logo handling to the backend, with the frontend now only consuming the resolved branding state.

This centralizes branding logic, enables dynamic white-label deployments, and ensures consistent brand, logo, and contact details throughout the app.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -71,6 +71,7 @@ services:
         OAUTH2_PROVIDER: ${OAUTH2_PROVIDER:- }
         LOGO_PATHS: ${LOGO_PATHS:- }
         CUSTOM_COLORS: ${CUSTOM_COLORS:- }
+        BRAND_CONFIG: ${BRAND_CONFIG:- }
     ports:
       - "3000:3000"
     depends_on:
