feat: add `BRAND_CONFIG` env to docker-compose and update overview page to use license validity from store
Added support for the `BRAND_CONFIG` environment variable in `docker-compose.yml` to enable runtime white-label customization. Updated the overview page to use `isLicenseValid` from the Redux store and ensure navigation logic reflects both cloud version and license status, aligning with the unified branding and backend-driven license validity approach.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -54,6 +54,7 @@ services:
       ALLOWED_ORGANIZATION_ADMINS: ${ALLOWED_ORGANIZATION_ADMINS:-}
       LOGO_PATHS: ${LOGO_PATHS}
       CUSTOM_COLORS: ${CUSTOM_COLORS}
+      BRAND_CONFIG: ${BRAND_CONFIG}
     ports:
       - "8080:8080"
   frontend:
@@ -65,7 +66,7 @@ services:
         GOOGLE_TRACKING_ID: ${GOOGLE_TRACKING_ID:- }
         MUI_X_LICENSE: ${MUI_X_LICENSE:- }
         INVITATION_VIA_EMAIL: ${INVITATION_VIA_EMAIL:-false}
-        CLOUD_VERSION: false
+        CLOUD_VERSION: ${CLOUD_VERSION:-false}
         NODE_ENV: production
         ENABLE_SSO: ${ENABLE_SSO:-false}
         OAUTH2_PROVIDER: ${OAUTH2_PROVIDER:- }
