refactor: notification email templates to use shared branding and layout
Centralized branding by introducing `BrandConfig` and updating all notification email templates to reference the shared `main-layout` Thymeleaf fragment. Email templates now consistently use dynamic brand values (name, short name, etc.) and background color via `BrandingService`, improving maintainability and supporting white-labeling. Controllers and services were updated to inject and use `BrandingService` for all relevant email operations. Message properties and templates were adjusted to support parameterization of brand-specific strings.

--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -115,3 +115,4 @@ license-fingerprint-required: ${LICENSE_FINGERPRINT_REQUIRED:true}
 white-labeling:
   logo-paths: ${LOGO_PATHS:}
   custom-colors: ${CUSTOM_COLORS:}
+  brand-config: ${BRAND_CONFIG:}
