--- a/api/src/main/resources/mailMessages.properties
+++ b/api/src/main/resources/mailMessages.properties
@@ -3,14 +3,14 @@ regards=Regards,
 signature=Signature
 happyToWelcome=We are happy to welcome you. Please first check your account. Press the button below.
 ifHaveQuestions=If you have questions just answer this mail.
-grashTeam=The Atlas Team
+grashTeam=The {0} Team
 needHelp=Need Help?
 hereToHelp=We are here to help you
 verifyAccount=Verify Account
 signupHeader=We are delighted to have you here! Prepare to dive into your new account.
-inviteHeader=You have been invited to use Atlas CMMS.
-inviteTitle=Invitation to use Atlas CMMS.
-inviteMessage={0} has invited you to join the {1} Company on Atlas.
+inviteHeader=You have been invited to use {0}.
+inviteTitle=Invitation to use {0}.
+inviteMessage={0} has invited you to join the {1} Company on {2}.
 joinCompany=Join Company
 newWorkOrderHeader=New work order assigned to you
 newWorkOrder=New Work order
@@ -20,7 +20,7 @@ requestUpdateHeader=A work order you requested has been updated
 requestUpdate=Request Update
 newPurchaseOrderHeader=New Purchase Order
 newPurchaseOrder=New Purchase Order
-resetPwdHeader=New Atlas Password
+resetPwdHeader=New {0} Password
 resetPwdMessage=We received a request to reset your password. Please click the button below to confirm the reset. Once confirmed, your new temporary password will be: <br><br>{0}<br><br>Please make sure to change this password as soon as possible for your account security.
 confirm_reset=Confirm reset
 login=Log In
