--- a/api/src/main/resources/application.yml
+++ b/api/src/main/resources/application.yml
@@ -1,10 +1,16 @@
 spring:
   datasource:
-    # url: jdbc:h2:mem:test_db;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
-    url: jdbc:postgresql://${DB_URL}
-    username: ${DB_USER}
-    password: ${DB_PWD}
-    driver-class-name: org.postgresql.Driver
+    # For Oracle Autonomous Database (ADB) using the wallet:
+    # - Unzip the ADB wallet into ./oracle-wallet and mount it inside the container at /opt/oracle/wallet
+    # - Set DB_SERVICE_NAME to the TNS alias (e.g. adb_high) found in tnsnames.ora inside the wallet
+    # - Ensure the container sets TNS_ADMIN=/opt/oracle/wallet (see docker-compose)
+    #
+    # The driver will use the alias from tnsnames.ora. Optionally you can embed TNS_ADMIN in the URL:
+    # jdbc:oracle:thin:@adb_high?TNS_ADMIN=/opt/oracle/wallet
+    url: jdbc:oracle:thin:@${DB_SERVICE_NAME}
+    username: ${DB_USERNAME:${DB_USER:}}
+    password: ${DB_PASSWORD:${DB_PWD:}}
+    driver-class-name: oracle.jdbc.OracleDriver
   #    init:
   #      data-locations: classpath:data-preprod.sql
   #    tomcat:
@@ -36,7 +42,8 @@ spring:
       hibernate:
         enable_lazy_load_no_trans: true
         format_sql: true
-        dialect: org.hibernate.dialect.PostgreSQLDialect
+        # Oracle dialect for Hibernate
+        dialect: org.hibernate.dialect.Oracle12cDialect
         id:
           new_generator_mappings: false
     defer-datasource-initialization: false
