--- a/.gitignore
+++ b/.gitignore
@@ -9,4 +9,4 @@ logo
 # Ignore Oracle Autonomous Database wallet (do NOT commit)
 oracle-wallet/
 # or explicitly ignore ./oracle-wallet
-/oracle-
+/oracle-wallet/
